--- a/index.html
+++ b/index.html
@@ -104,47 +104,47 @@ https://templatemo.com/tm-591-villa-agency
       <div class="item item-1">
         <div class="header-text">
           <span class="category">Toronto, <em>Canada</em></span>
-          <h2>Hurry!<br>Get the Best Villa for you</h2>
+          <!-- <h2>Hurry!<br>Get the Best Villa for you</h2> -->
         </div>
       </div>
       <div class="item item-2">
         <div class="header-text">
           <span class="category">Melbourne, <em>Australia</em></span>
-          <h2>Be Quick!<br>Get the best villa in town</h2>
+          <!-- <h2>Be Quick!<br>Get the best villa in town</h2> -->
         </div>
       </div>
       <div class="item item-3">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
         </div>
       </div>
 
       <div class="item item-4">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
         </div>
       </div>
 
       <div class="item item-5">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
         </div>
       </div>
 
       <div class="item item-6">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
         </div>
       </div>
 
       <div class="item item-7">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
         </div>
       </div>
     </div>
@@ -234,11 +234,11 @@ https://templatemo.com/tm-591-villa-agency
               </li>
               <li>
                 <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
-                <h4>Payment<br><span>Payment Process</span></h4>
+                <h4>Renewing<br><span>Spaces</span></h4>
               </li>
               <li>
                 <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
-                <h4>Safety<br><span>24/7 Under Control</span></h4>
+                <h4>Fixing & Reviving<br><span>Service</span></h4>
               </li>
             </ul>
           </div>
