--- a/index.html
+++ b/index.html
@@ -104,47 +104,47 @@ https://templatemo.com/tm-591-villa-agency
       <div class="item item-1">
         <div class="header-text">
           <span class="category">Toronto, <em>Canada</em></span>
-          <!-- <h2>Hurry!<br>Get the Best Villa for you</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Hurry!<br>Get the Best Villa for you</h2>
         </div>
       </div>
       <div class="item item-2">
         <div class="header-text">
           <span class="category">Melbourne, <em>Australia</em></span>
-          <!-- <h2>Be Quick!<br>Get the best villa in town</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Be Quick!<br>Get the best villa in town</h2>
         </div>
       </div>
       <div class="item item-3">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Act Now!<br>Get the highest level penthouse</h2>
         </div>
       </div>
 
       <div class="item item-4">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Act Now!<br>Get the highest level penthouse</h2>
         </div>
       </div>
 
       <div class="item item-5">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Act Now!<br>Get the highest level penthouse</h2>
         </div>
       </div>
 
       <div class="item item-6">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Act Now!<br>Get the highest level penthouse</h2>
         </div>
       </div>
 
       <div class="item item-7">
         <div class="header-text">
           <span class="category">Miami, <em>South Florida</em></span>
-          <!-- <h2>Act Now!<br>Get the highest level penthouse</h2> -->
+          <h2 style=" color: transparent; user-select: none;">Act Now!<br>Get the highest level penthouse</h2>
         </div>
       </div>
     </div>
