--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ https://templatemo.com/tm-591-villa-agency
   <footer>
     <div class="container">
       <div class="col-lg-8">
-        <p>Copyright © <span id="currentYear"></span> Tech Con Consulting Engineers | All rights reserved.
+        <p>Copyright © <span id="currentYear"></span> Tech Con Consulting Engineers. All rights reserved.
 
       </div>
     </div>
